--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Yogic Startpage</title>
+<title>Bridgeview Startpage</title>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/settings.js"></script>
@@ -30,7 +30,7 @@
 			<div class="clear"></div>
 		</header>
 		<section id="bm">
-		  <!-- This is an example of what would be output by js/menu.js:
+		  <!-- This is an example of what would be output by js/menu.js:-->
 			<ul>
 				<li class="title" onclick="dropdownToggle(this)">tech</li>
 				<li class="link"><a href="#">r/web_design</a></li>
@@ -46,12 +46,12 @@
 				<li class="link"><a href="#">akame ga kill</a></li>
 			</ul>
 			<div class="clear"></div>
-			-->
+
 		</section>
 
 		<form id="search" method="get">
 			<ul class="engine">
-<!-- Example Engines that get read in from js/settings.js --
+				<!-- Example Engines that get read in from js/settings.js -->
 				<li class="first"><p id="curreng"><a href="http://google.com/search" id="q">google</a></p>
 					<ul class="sub">
 						<li class="sel"><a href="http://www.google.com/images" id="q">google-img</a></li>
@@ -60,10 +60,9 @@
 						<li class="sel"><a href="http://vimeo.com/search" id="q">vimeo</a></li>
 					</ul>
 				</li>
--->
 			</ul>
 			<span>|</span>
-<!--			<ul class="type"><li><a>M</a></li></ul>-->
+				<ul class="type"><li><a>M</a></li></ul>
 			<ul class="type">
 				<li class="first"><p id="currtype">M</p>
 				</li>
