--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
 <link rel="stylesheet" href="css/weather-icons.min.css"/>
 
 <link rel="stylesheet" href="css/style.css"/>
-
 </head>
 <body>
 	<div id="wrapper">
+		<div id="weather">
+			<a href="http://www.accuweather.com/en/us/philadelphia-pa/19102/current-weather/350540" class="aw-widget-legal">
+				<!--
+                By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at http://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at http://www.accuweather.com/en/privacy.
+                -->
+			</a><div id="awtd1486569093622" class="aw-widget-36hour"  data-locationkey="350540" data-unit="f" data-language="en-us" data-useip="false" data-uid="awtd1486569093622" data-editlocation="false"></div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script></div>
+		<div id="scores"><iframe src="http://www.espn.com"></iframe></div>
 		<header>
 			<div id="fulltime">
-			        <h1 style="font-size:1.3em">&#2384</h1>
-				<h1>Here & Now</h1>
+				<h1>Bridgeview Living</h1>
 				<h1 id="time"></h1>
 				<h2 id="day"></h2>
 				<h3 id="date"></h3>
+				<div class="clear"></div>
 			</div>
-			<div id="weather"></div>
-			<div class="clear"></div>
 		</header>
 		<section id="bm">
 		  <!-- This is an example of what would be output by js/menu.js:-->
