--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
 <meta charset="UTF-8">
 <title>Bridgeview Startpage</title>
 
+<script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/settings.js"></script>
 <script type="text/javascript" src="js/menu.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <!-- Weather plugin by simpleweatherjs.com; weather font by ErikFlowers because of his moon phrase -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/3.1.0/jquery.simpleWeather.min.js"></script>
@@ -16,65 +26,50 @@
 <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
+<div class="container-fluid">
 	<div id="wrapper">
-		<div id="weather">
-			<a href="http://www.accuweather.com/en/us/philadelphia-pa/19102/current-weather/350540" class="aw-widget-legal">
-				<!--
-                By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at http://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at http://www.accuweather.com/en/privacy.
-                -->
-			</a><div id="awtd1486569093622" class="aw-widget-36hour"  data-locationkey="350540" data-unit="f" data-language="en-us" data-useip="false" data-uid="awtd1486569093622" data-editlocation="false"></div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script></div>
-		<div id="scores"><iframe src="http://www.espn.com"></iframe></div>
-		<header>
-			<div id="fulltime">
-				<h1>Bridgeview Living</h1>
-				<h1 id="time"></h1>
-				<h2 id="day"></h2>
-				<h3 id="date"></h3>
-				<div class="clear"></div>
+		<!-- Header row for clock and date -->
+		<header class="row" style="background-color: rgba(255,255,255,0.74);margin-top: -9px">
+			<div class="col-md-4">
+				<h2 style="text-align:left" id="time"></h2>
 			</div>
+			<div class="col-md-4"></div>
+			<div class="col-md-4"></div>
 		</header>
-		<section id="bm">
-		  <!-- This is an example of what would be output by js/menu.js:-->
-			<ul>
-				<li class="title" onclick="dropdownToggle(this)">tech</li>
-				<li class="link"><a href="#">r/web_design</a></li>
-				<li class="link"><a href="#">r/unixporn</a></li>
-				<li class="link"><a href="#">r/battlestations</a></li>
-				<li class="link"><a href="#">stackoverflow</a></li>
-			</ul>
-			<ul>
-				<li class="title" onclick="dropdownToggle(this)">anime</li>
-				<li class="link"><a href="#">/a/</a></li>
-				<li class="link"><a href="#">aldnoah.zero</a></li>
-				<li class="link"><a href="#">tokyo esp</a></li>
-				<li class="link"><a href="#">akame ga kill</a></li>
-			</ul>
-			<div class="clear"></div>
+		<!-- First row below header -->
+		<div id="weather-qoute-row" class="row">
+			<div id="weather-col" class="col-md-4">
+				<div id="weather">
+					<a href="http://www.accuweather.com/en/us/philadelphia-pa/19102/weather-forecast/350540" class="aw-widget-legal">
+					</a><div id="awcc1486569633708" class="aw-widget-current"  data-locationkey="350540" data-unit="f" data-language="en-us" data-useip="false" data-uid="awcc1486569633708"></div>
+				</div>
+			</div>
+			<div class="col-md-4"></div>
+			<div class="col-md-4"></div>
+		</div>
+		<!-- Second row, above footer -->
+		<div id="feeds-traffic-row" class="row">
+			<div id="wsj-col" class="col-md-4">
+				<div id="wsj-div">
 
-		</section>
+					<!-- start feedwind code -->
+					<script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="10352/"></script>
+					<!-- end feedwind code -->
+				</div>
+			</div>
+			<div class="col-md-4" id="map-col">
+				<div id="map"></div>
+				<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPBTNXR0RYg9Ot_lVvmp-QYVdS4Zxak2M&callback=initMap"></script>
 
-		<form id="search" method="get">
-			<ul class="engine">
-				<!-- Example Engines that get read in from js/settings.js -->
-				<li class="first"><p id="curreng"><a href="http://google.com/search" id="q">google</a></p>
-					<ul class="sub">
-						<li class="sel"><a href="http://www.google.com/images" id="q">google-img</a></li>
-						<li class="sel"><a href="http://soundcloud.com/search" id="q">soundcloud</a></li>
-						<li class="sel"><a href="http://youtube.com/results" id="search_query">youtube</a></li>
-						<li class="sel"><a href="http://vimeo.com/search" id="q">vimeo</a></li>
-					</ul>
-				</li>
-			</ul>
-			<span>|</span>
-				<ul class="type"><li><a>M</a></li></ul>
-			<ul class="type">
-				<li class="first"><p id="currtype">M</p>
-				</li>
-			</ul>
-			<input type="text" id="query" autocomplete="on"/>
-			
-			<div class="clear"></div>
-		</form>
+			</div>
+			<div class="col-md-4"></div>
+		</div>
+		<div id="footer" class="row">
+			<div class="col-md-12">
+				<iframe src="https://www.espn.com" id="scoreboard"></iframe>
+			</div>
+		</div>
 	</div>
+</div>
 </body>
 </html>
