--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div id="weather-col" class="col-md-3">
 				<div id="weather">
 					<a href="http://www.accuweather.com/en/us/philadelphia-pa/19102/weather-forecast/350540" class="aw-widget-legal">
-					</a><div id="awcc1486656407924" class="aw-widget-current"  data-locationkey="350540" data-unit="f" data-language="en-us" data-useip="false" data-uid="awcc1486656407924"></div></div>
+					</a><div id="awcc1486656407924" class="aw-widget-current"  data-locationkey="350540" data-unit="f" data-language="en-us" data-useip="false" data-uid="awcc1486656407924"></div>
 			</div>
 			<div class="col-md-6" id="quote-col">
 				<div id="quote">
