--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		</div>
 		<div id="footer" class="row">
 			<div class="col-md-12">
-				<iframe src="https://www.espn.com" id="scoreboard"></iframe>
+				<iframe src="//www.espn.com" id="scoreboard"></iframe>
 			</div>
 		</div>
 	</div>
